<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/jugar"
        android:layout_width="166dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="144dp"
        android:text="@string/jugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/verde"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="192dp"
        android:scrollbarFadeDuration="250"
        android:text="@string/verde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rojo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:text="@string/rojo"
        app:layout_constraintStart_toEndOf="@+id/verde"
        app:layout_constraintTop_toTopOf="@+id/verde" />

    <Button
        android:id="@+id/amarillo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:text="@string/amarillo"
        app:layout_constraintStart_toStartOf="@+id/verde"
        app:layout_constraintTop_toTopOf="@+id/verde" />

    <Button
        android:id="@+id/azul"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:text="@string/azul"
        app:layout_constraintStart_toEndOf="@+id/amarillo"
        app:layout_constraintTop_toTopOf="@+id/amarillo" />

    <TextView
        android:id="@+id/contador"
        android:layout_width="75dp"
        android:layout_height="62dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="576dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="405dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="76dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>